# python-project-lvl3

./: .gitignore  README.md  makefile  pyproject.toml
page_loader/: __init__.py
page_loader/modules/: __init__.py  download.py
page_loader/scripts/: page_loader.py
