[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "level 3 student project"
license = "MIT"
classifiers = [
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Python Modules"
]

authors = ["Boris Ageyev <mr.broomy@gmail.com>"]
repository = "https://github.com/mr-xeroth/python-project-lvl3"
packages = [
    { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^5.3"

[tool.poetry.dev-dependencies]
requests = "^2.0"
flake8 = "^4.0"
pytest = "^7.0"
coverage = "^6.3"
pytest-cov = "^3.0"
beautifulsoup4 = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"
